Modify to use fork of PaperMod (fixes deprecated site.Social calls)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .DS_Store
+content/music/mix_19_09_24.mp4
+content/music/mix_test.mp4
+content/music/test.wav
+public/music/mix_19_09_24.mp4
+public/music/mix_test.mp4
+public/music/test.wav
